# label-01087-20260408

./: .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/include/: common.h  fee_rate.h  floor.h  graph.h  http_server.h  member.h  parking_lot.h  parking_record.h  parking_spot.h  reservation.h  test_framework.h  vehicle.h
backend/scripts/: interactive_test.sh  run_tests.sh
backend/src/: http_server.cpp  main.cpp  parking_lot.cpp  tests.cpp
docs/: QA_MANUAL.md  project_design.md
